updated CSS files

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <title>Vite App</title>
+    <title>Drag-Drop App</title>
   </head>
   <body>
     <header id="headerdata"></header>
+    <div id="popup"></div>
     <div id="todo"></div>
     <script type="module" src="header.js"></script>
     <script type="module" src="/main.js"></script>
